// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h3>
     Ratings Module 
  </h3>
  <div>
    <h3>
      Rating Breakdown
    </h3>
    <div>
      ratings
    </div>
    <div>
      ratings breakdown graph
    </div>
    <div>
      recommended
    </div>
    <div>
      <h3>
        Product Breakdown
      </h3>
      <div>
        size
      </div>
      <div>
        width
      </div>
      <div>
        comfort
      </div>
    </div>
  </div>
  <div>
    <h3>
      Reviews List
    </h3>
    <div>
      <label>
        Sort on: 
      </label>
      <select
        id="sort-type"
        onChange={[Function]}
      >
        <option
          value="relevant"
        >
          Relevant
        </option>
        <option
          value="newest"
        >
          Newest
        </option>
        <option
          value="helpful"
        >
          Helpful
        </option>
      </select>
    </div>
    <ul />
  </div>
  <button
    disabled={true}
    onClick={[Function]}
  >
    More Reviews
  </button>
  <button
    onClick={[Function]}
  >
    Add Review
  </button>
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <h3>
    Rating Breakdown
  </h3>
  <div>
    ratings
  </div>
  <div>
    ratings breakdown graph
  </div>
  <div>
    recommended
  </div>
  <div>
    <h3>
      Product Breakdown
    </h3>
    <div>
      size
    </div>
    <div>
      width
    </div>
    <div>
      comfort
    </div>
  </div>
</div>
`;

exports[`renders correctly 3`] = `null`;
